adds tic-tac-toe example and lecture notes about code organization

--- a/.github/workflows/cc.yaml
+++ b/.github/workflows/cc.yaml
@@ -14,4 +14,6 @@ jobs:
           java-version: 21
           distribution: temurin
       - name: Build with Gradle
+        env:
+          DB_URL: ${{ secrets.DB_URL }}
         run: ./code/jvm/gradlew -p code/jvm check --info
