--- a/code/js/react-intro/package.json
+++ b/code/js/react-intro/package.json
@@ -30,6 +30,6 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "6.27.0"
   }
 }
