--- a/.github/workflows/cc.yaml
+++ b/.github/workflows/cc.yaml
@@ -17,3 +17,23 @@ jobs:
         env:
           DB_URL: ${{ secrets.DB_URL }}
         run: ./code/jvm/gradlew -p code/jvm check --info
+  test-fe:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
